--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,1 +1,9 @@
+server:
+  port: 8081
 
+service:
+  URI: http://localhost:8080/demo-api/companies/reset
+company:
+  name: Volkswagen
+  country: Ukr
+  city: Lviv
