add web socket logic

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -15,4 +15,5 @@ spring:
           format_sql: true
           dialect: org.hibernate.dialect.PostgreSQLDialect
           current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
-
+server:
+  port: 8081
